--- a/src/App.css
+++ b/src/App.css
@@ -5,14 +5,21 @@ div {
 input {
   margin-right: 10px;
   background-color: aquamarine;
+  color: darkmagenta;
 }
 
 button {
   margin-left: 10px;
-  background-color: rgb(241, 107, 107)
+  background-color: rgb(241, 107, 107);
+  color: darkblue;
+
 }
 
 span {
   margin-left: 10px;
 }
 
+h2{
+  background-color: aquamarine;
+  color: blue;
+}
