--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ span {
   margin-left: 10px;
 }
 
-h2{
-  background-color: aquamarine;
-  color: blue;
+h1{
+  background-color: bisque;
+  color: rgb(0, 0, 124);
 }
